# ExamenParcial3

./: CMakeLists.txt  README.md  main.cpp  main.h
Implementación_C/: asistencia.c  asistencia.h  estudiante.c  estudiante.h  main.c
Implementación_C++/: asistencia.cpp  asistencia.h  estudiante.cpp  estudiante.h  main.cpp
