cmake_minimum_required(VERSION 3.29)
project(ExamenParcial3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Lenguaje_C++
        Implementaci贸n_C++/main.cpp
        Implementaci贸n_C++/estudiante.h
        Implementaci贸n_C++/estudiante.cpp
        Implementaci贸n_C++/asistencia.h)
